--- a/src/pages/dalil/[id].astro
+++ b/src/pages/dalil/[id].astro
@@ -25,7 +25,7 @@ const res = await fetch(API_URL);
 const json = await res.json();
 
 const dalil = json.find((dalil) => dalil.id == id);
-const ogDescription = dalil.text_en.replace(/<[^>]*>?/gm, "").slice(0, 200);
+const ogDescription = decodeURIComponent(encodeURIComponent(dalil.text_en.replace(/<[^>]*>?/gm, ""))).slice(0, 200);
 ---
 
 <!DOCTYPE html>
