--- a/src/pages/dalil/[id].astro
+++ b/src/pages/dalil/[id].astro
@@ -141,7 +141,7 @@ const ogDescription = decode(dalil.text_en.replace(/<[^>]*>?/gm, ""));
                                 </div>
                                 <script
                                     is:inline
-                                    src="/public/js/easy.qrcode.min.js"
+                                    src="/js/easy.qrcode.min.js"
                                 />
                                 <script define:vars={{ dalil }}>
                                         // Options
