ganti domain cms

--- a/src/components/DalilList.astro
+++ b/src/components/DalilList.astro
@@ -93,7 +93,7 @@ let { data: data } = Astro.props;
                                             </svg>
                                         </a>
                                         <a
-                                            href={`https://ks.valocg.xyz/wp-admin/post.php?post=${dalil.id}&action=edit`}
+                                            href={`https://admin.mediakautsar.com/wp-admin/post.php?post=${dalil.id}&action=edit`}
                                             target="_blank"
                                             class="btn md:opacity-10 group-hover:opacity-100 btn-ghost btn-sm"
                                         >
