--- a/src/components/SideMenus.astro
+++ b/src/components/SideMenus.astro
@@ -1,5 +1,5 @@
 ---
-const API_URL = "https://ks.valocg.xyz/wp-json/api/menu";
+const API_URL = "https://admin.mediakautsar.com/wp-json/api/menu";
 
 const res = await fetch(API_URL);
 const menus = await res.json();
