--- a/src/pages/dalil/index.astro
+++ b/src/pages/dalil/index.astro
@@ -8,7 +8,7 @@ import "@fontsource/titillium-web";
 import DalilTable from "../../components/DalilTable.astro";
 import DalilList from "../../components/DalilList.astro";
 
-const API_URL = "https://ks.valocg.xyz/wp-json/api/dalil";
+const API_URL = "https://admin.mediakautsar.com/wp-json/api/dalil";
 // FETCH DATA
 const res = await fetch(API_URL);
 const data = await res.json();
