--- a/src/components/DalilTable.astro
+++ b/src/components/DalilTable.astro
@@ -74,7 +74,7 @@ let {data:data} = Astro.props;
 
                                 </a>
                                 <a
-                                    href={`https://ks.valocg.xyz/wp-admin/post.php?post=${dalil.id}&action=edit`}
+                                    href={`https://admin.mediakautsar.com/wp-admin/post.php?post=${dalil.id}&action=edit`}
                                     target="_blank"
                                     class="btn md:opacity-0 group-hover:opacity-100 btn-ghost btn-sm"
                                 >
