--- a/src/pages/dalil/[id].astro
+++ b/src/pages/dalil/[id].astro
@@ -19,7 +19,7 @@ export async function getStaticPaths() {
     });
 }
 
-const API_URL = "https://ks.valocg.xyz/wp-json/api/dalil";
+const API_URL = "https://admin.mediakautsar.com/wp-json/api/dalil";
 
 const { id } = Astro.params;
 const res = await fetch(API_URL);
@@ -91,7 +91,7 @@ const ogDescription = decode(dalil.text_en.replace(/<[^>]*>?/gm, ""));
                     }
                 </div>
                 <a
-                    href={`https://ks.valocg.xyz/wp-admin/post.php?post=${dalil.id}&action=edit`}
+                    href={`https://admin.mediakautsar.com/wp-admin/post.php?post=${dalil.id}&action=edit`}
                     target="_blank"
                     class="btn btn-ghost btn-sm ml-auto"
                 >
